# discord-notify

./: .env.sh.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
