[package]
name = "discord-notifier"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
